@@ -5,8 +5,8 @@
     <artifactId>graph-core</artifactId>
 
     <packaging>jar</packaging>
-    <version>1.1.27</version>
-    <name>graph-core</name>
+    <version>2.0.0</version>
+    <name>Graph Core Next Generation</name>
 
     <description>
         The Reactome Graph Project aims to model the Reactome knowledgebase into a interconnected graph. For more information visit the reactome github repository.
@@ -21,13 +21,7 @@
 
     <developers>
         <developer>
-            <id>fabregat</id>
-            <name>Antonio Fabregat</name>
-            <email>fabregat@ebi.ac.uk</email>
-            <organization>http://www.ebi.ac.uk/</organization>
-        </developer>
-        <developer>
-        <id>gviteri</id>
+            <id>gviteri</id>
             <name>Guilherme Viteri</name>
             <email>gviteri@ebi.ac.uk</email>
             <organization>http://www.ebi.ac.uk/</organization>
@@ -35,74 +29,52 @@
         <developer>
             <id>fkorn</id>
             <name>Florian Korninger</name>
-            <email>fkorn@ebi.ac.uk</email>
-            <organization>http://www.ebi.ac.uk/</organization>
         </developer>
     </developers>
-    <contributors>
-        <contributor>
-        </contributor>
-    </contributors>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-parent</artifactId>
+        <version>2.5.3</version>
+    </parent>
 
     <properties>
-        <!--dependencies-->
-        <sdn.version>4.1.11.RELEASE</sdn.version>
-        <spring.test.version>4.3.11.RELEASE</spring.test.version>
-        <spring.version>4.3.11.RELEASE</spring.version>
-        <aspectj.version>1.8.10</aspectj.version>
-        <junit.version>4.13.1</junit.version>
+        <spring.version>5.3.5</spring.version>
+
+        <aspectj.version>1.9.6</aspectj.version>
+        <junit.version>5.7.2</junit.version>
         <logback.version>1.2.3</logback.version>
-        <reflection.version>0.9.10</reflection.version>
-        <swagger.annotations.version>1.5.6</swagger.annotations.version>
+        <reflection.version>0.9.12</reflection.version>
+        <jackson.version>2.12.3</jackson.version>
+        <commons.lang3.version>3.12.0</commons.lang3.version>
+        <jodd.bean.version>5.1.6</jodd.bean.version>
+
         <!--build-->
-        <jdk.version>1.8</jdk.version>
+        <jdk.version>11</jdk.version>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency.locations.enabled>false</dependency.locations.enabled>
+
         <!--maven build and plugins-->
-        <maven.compiler.version>3.5.1</maven.compiler.version>
-        <maven.javadoc.version>2.10.3</maven.javadoc.version>
-        <maven.jar.version>2.6</maven.jar.version>
-        <maven.source.version>2.4</maven.source.version>
-        <maven.assembly.version>2.6</maven.assembly.version>
-        <maven.surefire.version>2.12.4</maven.surefire.version>
-        <maven.site.version>3.4</maven.site.version>
-        <maven.info.report.version>2.8.1</maven.info.report.version>
-        <jackrabbit.version>2.10</jackrabbit.version>
-        <pmd.version>3.6</pmd.version>
-        <!--will be set as system properties during testing phase-->
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.resources.version>3.2.0</maven.resources.version>
+        <maven.jar.version>3.2.0</maven.jar.version>
+        <maven.source.version>3.2.1</maven.source.version>
 
         <!-- Test dependencies -->
-        <reactome.base>2.1.0-SNAPSHOT</reactome.base>
+        <reactome.base>1.2.21</reactome.base>
     </properties>
 
     <dependencies>
-
-        <!--Spring data import neo4j-->
+        <!-- This is everything needed to work with Spring Data Neo4j 6.0. -->
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-neo4j</artifactId>
-            <version>${sdn.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-neo4j</artifactId>
         </dependency>
-
-        <!--BOLT DRIVER-->
-        <!--<dependency>-->
-            <!--<groupId>org.neo4j</groupId>-->
-            <!--<artifactId>neo4j-ogm-bolt-driver</artifactId>-->
-            <!--<version>2.0.3</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.neo4j</groupId>-->
-            <!--<artifactId>neo4j-ogm-embedded-driver</artifactId>-->
-            <!--<version>2.0.3</version>-->
-        <!--</dependency>-->
-
-
-        <!--Logback classic-->
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!--Reflection library -->
@@ -110,13 +82,6 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>${reflection.version}</version>
-        </dependency>
-        <!-- Swagger for Annotations -->
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${swagger.annotations.version}</version>
-            <scope>compile</scope>
         </dependency>
 
         <!--Aspectj AOP -->
@@ -131,34 +96,25 @@
             <version>${aspectj.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.15</version>
+            <version>${commons.lang3.version}</version>
         </dependency>
 
-
-        <!--Spring junit test framework-->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.test.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!--Junit Tests-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.reactome.base</groupId>
             <artifactId>reactome-base</artifactId>
@@ -169,46 +125,29 @@
         <dependency>
             <groupId>org.jodd</groupId>
             <artifactId>jodd-bean</artifactId>
-            <version>3.7</version>
+            <version>${jodd.bean.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
-    <repositories>
-
-        <!-- Sonatype repository from which to obtain SNAPSHOT dependencies created
-			by Reactome (or others sources) -->
-        <repository>
-            <id>oss.sonatype.org-snapshot</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-
-        <repository>
-            <id>nexus-ebi-repo</id>
-            <name>The EBI internal repository</name>
-            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
     <build>
-        <finalName>${project.name}</finalName>
+        <finalName>${artifactId}</finalName>
 
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <filtering>true</filtering>
+                <filtering>false</filtering>
             </resource>
         </resources>
 
@@ -220,13 +159,47 @@
         </testResources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${project.parent.version}</version>
+                <executions>
+                    <execution>
+                        <id>repackage</id>
+                        <configuration>
+                            <classifier>exec</classifier>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!--Plugin needed to force maven resources to latest version. Default version contains a bug-->
             <!--preventing maven to filter resources containg a @ symbol-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>${maven.resources.version}</version>
 
                 <configuration>
                     <escapeString>\</escapeString>
@@ -238,32 +211,29 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
                 <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
 
-            <!--Maven site generates project summary that can be deployed to nexus-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${maven.site.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.wagon</groupId>
-                        <artifactId>wagon-webdav-jackrabbit</artifactId>
-                        <version>${jackrabbit.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven.jar.version}</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/logback.xml</exclude>
-                    </excludes>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>org/reactome/server/graph/Main.class</exclude>
+                                <exclude>**/logback.xml</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <!--
@@ -275,8 +245,8 @@
                 <artifactId>aspectj-maven-plugin</artifactId>
                 <version>1.4</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
                 <executions>
                     <execution>
@@ -320,6 +290,37 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>mvn-central</id>
+            <name>The Maven Central repository</name>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>nexus-ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
+        <repository>
+            <id>spring-libs-release</id>
+            <url>https://repo.spring.io/libs-snapshot</url>
+        </repository>
+
+    </repositories>
+
     <!--Configures the distribution to nexus repository -->
     <distributionManagement>
         <!-- EBI repo -->
@@ -336,42 +337,4 @@
             <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
         </snapshotRepository>
     </distributionManagement>
-    <!--This configuration is needed so that javadoc is included in maven site-->
-
-    <reporting>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.version}</version>
-                <configuration>
-                    <quiet>true</quiet>
-                </configuration>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>javadoc</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>${maven.info.report.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>${pmd.version}</version>
-                <configuration>
-                    <skipEmptyReport>false</skipEmptyReport>
-                    <linkXRef>false</linkXRef>
-                    <sourceEncoding>utf-8</sourceEncoding>
-                    <targetJdk>${jdk.version}</targetJdk>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
